<resources>
    <string name="app_name">Halachic Prayer Times</string>
    <string name="title_activity_zmanim">Halachic Times</string>
    <string name="opinion_120">Day is 120 minutes before sunrise / after sunset</string>
    <string name="opinion_120_zmanis">Day is 120 זמניות minutes before sunrise / after sunset</string>
    <string name="opinion_16">Day is 16.1° below sunrise / sunset</string>
    <string name="opinion_16_sunset">Day is from dawn 16.1° to sea level sunset</string>
    <string name="opinion_16_night">Day is from dawn 16.1° to nightfall</string>
    <string name="opinion_26">Day is 26° below sunrise / sunset</string>
    <string name="opinion_19">Day is 19° below sunrise / sunset</string>
    <string name="opinion_19_8">Day is 19.8° below sunrise / sunset</string>
    <string name="opinion_18">Day is 18° below sunrise / sunset</string>
    <string name="opinion_60">Day is 60 minutes before sunrise / after sunset</string>
    <string name="opinion_72">Day is 72 minutes before sunrise / after sunset</string>
    <string name="opinion_72_zmanis">Day is 72 זמניות minutes before sunrise / after sunset</string>
    <string name="opinion_90">Day is 90 minutes before sunrise / after sunset</string>
    <string name="opinion_90_zmanis">Day is 90 זמניות minutes before sunrise / after sunset</string>
    <string name="opinion_96">Day is 96 minutes before sunrise / after sunset</string>
    <string name="opinion_96_zmanis">Day is 96 זמניות minutes before sunrise / after sunset</string>
    <string name="opinion_ateret">According to Yeshivat Ateret Torah</string>
    <string name="opinion_baal_hatanya">According to Baal haTanya</string>
    <string name="opinion_gra">According to GRA</string>
    <string name="opinion_mga">According to Magen Avraham</string>
    <string name="opinion_tam">According to Rabbeinu Tam</string>
    <string name="opinion_baal_hatanya_all">Change all times according to Baal haTanya?</string>
    <string name="hour">Seasonal hour</string>
    <string name="hour_mga" translatable="false">@string/opinion_mga</string>
    <string name="hour_gra" translatable="false">@string/opinion_gra</string>
    <string name="hour_baal_hatanya" translatable="false">@string/opinion_baal_hatanya</string>
    <string name="hour_120" translatable="false">@string/opinion_120</string>
    <string name="hour_120_zmanis" translatable="false">@string/opinion_120_zmanis</string>
    <string name="hour_16" translatable="false">@string/opinion_16</string>
    <string name="hour_18" translatable="false">@string/opinion_18</string>
    <string name="hour_19_8" translatable="false">@string/opinion_19_8</string>
    <string name="hour_26" translatable="false">@string/opinion_26</string>
    <string name="hour_60" translatable="false">@string/opinion_60</string>
    <string name="hour_72" translatable="false">@string/opinion_72</string>
    <string name="hour_72_zmanis" translatable="false">@string/opinion_72_zmanis</string>
    <string name="hour_90" translatable="false">@string/opinion_90</string>
    <string name="hour_90_zmanis" translatable="false">@string/opinion_90_zmanis</string>
    <string name="hour_96" translatable="false">@string/opinion_96</string>
    <string name="hour_96_zmanis" translatable="false">@string/opinion_96_zmanis</string>
    <string name="hour_ateret" translatable="false">@string/opinion_ateret</string>
    <string name="hour_title" translatable="false">@string/hour</string>
    <string name="hour_format" translatable="false">H:mm</string>
    <string name="hour_format_seconds" translatable="false">H:mm:ss</string>
    <string name="dawn">Dawn</string>
    <string name="dawn_19" translatable="false">@string/opinion_19</string>
    <string name="dawn_19_8" translatable="false">@string/opinion_19_8</string>
    <string name="dawn_120" translatable="false">@string/opinion_120</string>
    <string name="dawn_120_zmanis" translatable="false">@string/opinion_120_zmanis</string>
    <string name="dawn_18" translatable="false">@string/opinion_18</string>
    <string name="dawn_26" translatable="false">@string/opinion_26</string>
    <string name="dawn_16" translatable="false">@string/opinion_16</string>
    <string name="dawn_96" translatable="false">@string/opinion_96</string>
    <string name="dawn_96_zmanis" translatable="false">@string/opinion_96_zmanis</string>
    <string name="dawn_90" translatable="false">@string/opinion_90</string>
    <string name="dawn_90_zmanis" translatable="false">@string/opinion_90_zmanis</string>
    <string name="dawn_72" translatable="false">@string/opinion_72</string>
    <string name="dawn_72_zmanis" translatable="false">@string/opinion_72_zmanis</string>
    <string name="dawn_60" translatable="false">@string/opinion_60</string>
    <string name="dawn_baal_hatanya" translatable="false">@string/opinion_baal_hatanya</string>
    <string name="tallis">Earliest <i>tallis</i> and <i>tefillin</i> (משיכיר)</string>
    <string name="tallis_only">Earliest <i>tallis</i> (משיכיר)</string>
    <string name="tallis_11_5">Sun is 11.5° below horizon</string>
    <string name="tallis_11">Sun is 11° below horizon</string>
    <string name="tallis_10">Sun is 10.2° below horizon</string>
    <string name="tallis_9_5">Sun is 9.5° below horizon</string>
    <string name="tallis_7_65">Sun is 7.65° below horizon</string>
    <string name="tallis_baal_hatanya" translatable="false">@string/opinion_baal_hatanya</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunrise_elevated">Adjusted for elevation</string>
    <string name="sunrise_sea">At sea level</string>
    <string name="sunrise_baal_hatanya" translatable="false">@string/opinion_baal_hatanya</string>
    <string name="shema">Latest <i>shema</i></string>
    <string name="shema_16_sunset" translatable="false">@string/opinion_16_sunset</string>
    <string name="shema_7">Day is from dawn 16.1° to night 7.083°</string>
    <string name="shema_19_8" translatable="false">@string/opinion_19_8</string>
    <string name="shema_120" translatable="false">@string/opinion_120</string>
    <string name="shema_18" translatable="false">@string/opinion_18</string>
    <string name="shema_96" translatable="false">@string/opinion_96</string>
    <string name="shema_96_zmanis" translatable="false">@string/opinion_96_zmanis</string>
    <string name="shema_16" translatable="false">@string/opinion_16</string>
    <string name="shema_90" translatable="false">@string/opinion_90</string>
    <string name="shema_90_zmanis" translatable="false">@string/opinion_90_zmanis</string>
    <string name="shema_72" translatable="false">@string/opinion_72</string>
    <string name="shema_72_zmanis" translatable="false">@string/opinion_72_zmanis</string>
    <string name="shema_mga" translatable="false">@string/opinion_mga</string>
    <string name="shema_ateret" translatable="false">@string/opinion_ateret</string>
    <string name="shema_3">3 hours before midday</string>
    <string name="shema_fixed">3 hours before fixed local midday</string>
    <string name="shema_gra" translatable="false">@string/opinion_gra</string>
    <string name="shema_baal_hatanya" translatable="false">@string/opinion_baal_hatanya</string>
    <string name="prayers">Latest morning prayers</string>
    <string name="prayers_120" translatable="false">@string/opinion_120</string>
    <string name="prayers_96" translatable="false">@string/opinion_96</string>
    <string name="prayers_96_zmanis" translatable="false">@string/opinion_96_zmanis</string>
    <string name="prayers_19_8" translatable="false">@string/opinion_19_8</string>
    <string name="prayers_90" translatable="false">@string/opinion_90</string>
    <string name="prayers_90_zmanis" translatable="false">@string/opinion_90_zmanis</string>
    <string name="prayers_ateret" translatable="false">@string/opinion_ateret</string>
    <string name="prayers_18" translatable="false">@string/opinion_18</string>
    <string name="prayers_fixed">2 hours before fixed local midday</string>
    <string name="prayers_16" translatable="false">@string/opinion_16</string>
    <string name="prayers_72" translatable="false">@string/opinion_72</string>
    <string name="prayers_72_zmanis" translatable="false">@string/opinion_72_zmanis</string>
    <string name="prayers_2">2 hours before midday</string>
    <string name="prayers_mga" translatable="false">@string/opinion_mga</string>
    <string name="prayers_gra" translatable="false">@string/opinion_gra</string>
    <string name="prayers_baal_hatanya" translatable="false">@string/opinion_baal_hatanya</string>
    <string name="midday">Midday</string>
    <string name="midday_solar">Solar noon</string>
    <string name="midday_fixed">Noon adjusted for the local latitude</string>
    <string name="midday_baal_hatanya" translatable="false">@string/opinion_baal_hatanya</string>
    <string name="earliest_mincha">Earliest afternoon prayers</string>
    <string name="earliest_mincha_greater">Greater <i>mincha</i></string>
    <string name="earliest_mincha_ateret" translatable="false">@string/opinion_ateret</string>
    <string name="earliest_mincha_72" translatable="false">@string/opinion_72</string>
    <string name="earliest_mincha_30">30 minutes after midday</string>
    <string name="earliest_mincha_16" translatable="false">@string/opinion_16</string>
    <string name="earliest_mincha_baal_hatanya" translatable="false">@string/opinion_baal_hatanya</string>
    <string name="mincha">Afternoon prayers</string>
    <string name="mincha_lesser">Lesser <i>mincha</i></string>
    <string name="mincha_72" translatable="false">@string/opinion_72</string>
    <string name="mincha_16" translatable="false">@string/opinion_16</string>
    <string name="mincha_ateret" translatable="false">@string/opinion_ateret</string>
    <string name="mincha_baal_hatanya" translatable="false">@string/opinion_baal_hatanya</string>
    <string name="plug_hamincha"><i>Plag haMincha</i></string>
    <string name="plug_hamincha_gra" translatable="false">@string/opinion_gra</string>
    <string name="plug_hamincha_120" translatable="false">@string/opinion_120</string>
    <string name="plug_hamincha_120_zmanis" translatable="false">@string/opinion_120_zmanis</string>
    <string name="plug_hamincha_16" translatable="false">@string/opinion_16</string>
    <string name="plug_hamincha_16_alos" translatable="false">@string/opinion_16_night</string>
    <string name="plug_hamincha_18" translatable="false">@string/opinion_18</string>
    <string name="plug_hamincha_19_8" translatable="false">@string/opinion_19_8</string>
    <string name="plug_hamincha_26" translatable="false">@string/opinion_26</string>
    <string name="plug_hamincha_60" translatable="false">@string/opinion_60</string>
    <string name="plug_hamincha_72" translatable="false">@string/opinion_72</string>
    <string name="plug_hamincha_72_zmanis" translatable="false">@string/opinion_72_zmanis</string>
    <string name="plug_hamincha_90" translatable="false">@string/opinion_90</string>
    <string name="plug_hamincha_90_zmanis" translatable="false">@string/opinion_90_zmanis</string>
    <string name="plug_hamincha_96" translatable="false">@string/opinion_96</string>
    <string name="plug_hamincha_96_zmanis" translatable="false">@string/opinion_96_zmanis</string>
    <string name="opinion">Opinion</string>
    <string name="emphasis_title">Emphasis</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_friday">Remind on Friday</string>
    <string name="reminder_monday">Remind on Monday</string>
    <string name="reminder_saturday">Remind on Saturday and Yom Tov</string>
    <string name="reminder_sunday">Remind on Sunday</string>
    <string name="reminder_thursday">Remind on Thursday</string>
    <string name="reminder_tuesday">Remind on Tuesday</string>
    <string name="reminder_wednesday">Remind on Wednesday</string>
</resources>