<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/sunset_defaultValue"
        android:dialogIcon="@drawable/ic_settings_opinion"
        android:entries="@array/sunset_entries"
        android:entryValues="@array/sunset_values"
        android:icon="@drawable/ic_settings_opinion"
        android:key="sunset"
        android:title="@string/opinion"/>
    <net.sf.times.preference.ZmanReminderPreference
        android:defaultValue="@string/reminder_defaultValue"
        android:dialogIcon="@drawable/ic_settings_alarm"
        android:entries="@array/reminder_entries"
        android:entryValues="@array/reminder_values"
        android:icon="@drawable/ic_settings_alarm"
        android:key="sunset.reminder"
        android:title="@string/reminder"/>
    <CheckBoxPreference
        android:defaultValue="@bool/reminder_day_1_defaultValue"
        android:dependency="sunset.reminder"
        android:key="sunset.reminder.day.1"
        android:title="@string/reminder_sunday"/>
    <CheckBoxPreference
        android:defaultValue="@bool/reminder_day_2_defaultValue"
        android:dependency="sunset.reminder"
        android:key="sunset.reminder.day.2"
        android:title="@string/reminder_monday"/>
    <CheckBoxPreference
        android:defaultValue="@bool/reminder_day_3_defaultValue"
        android:dependency="sunset.reminder"
        android:key="sunset.reminder.day.3"
        android:title="@string/reminder_tuesday"/>
    <CheckBoxPreference
        android:defaultValue="@bool/reminder_day_4_defaultValue"
        android:dependency="sunset.reminder"
        android:key="sunset.reminder.day.4"
        android:title="@string/reminder_wednesday"/>
    <CheckBoxPreference
        android:defaultValue="@bool/reminder_day_5_defaultValue"
        android:dependency="sunset.reminder"
        android:key="sunset.reminder.day.5"
        android:title="@string/reminder_thursday"/>
    <CheckBoxPreference
        android:defaultValue="@bool/reminder_day_6_defaultValue"
        android:dependency="sunset.reminder"
        android:key="sunset.reminder.day.6"
        android:title="@string/reminder_friday"/>
    <CheckBoxPreference
        android:defaultValue="@bool/reminder_day_7_defaultValue"
        android:dependency="sunset.reminder"
        android:key="sunset.reminder.day.7"
        android:title="@string/reminder_saturday"/>
    <CheckBoxPreference
        android:defaultValue="@bool/emphasis_defaultValue"
        android:key="sunset.emphasis"
        android:title="@string/emphasis_title"/>

</PreferenceScreen>