<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/reminder">
        <com.github.times.preference.ZmanReminderPreference
            android:defaultValue="@integer/reminder_defaultValue"
            android:dialogIcon="@drawable/ic_settings_alarm"
            android:icon="@drawable/ic_settings_alarm"
            android:key="fast_begins.reminder"
            android:title="@string/reminder"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_1_defaultValue"
            android:dependency="fast_begins.reminder"
            android:key="fast_begins.reminder.day.1"
            android:title="@string/reminder_sunday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_2_defaultValue"
            android:dependency="fast_begins.reminder"
            android:key="fast_begins.reminder.day.2"
            android:title="@string/reminder_monday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_3_defaultValue"
            android:dependency="fast_begins.reminder"
            android:key="fast_begins.reminder.day.3"
            android:title="@string/reminder_tuesday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_4_defaultValue"
            android:dependency="fast_begins.reminder"
            android:key="fast_begins.reminder.day.4"
            android:title="@string/reminder_wednesday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_5_defaultValue"
            android:dependency="fast_begins.reminder"
            android:key="fast_begins.reminder.day.5"
            android:title="@string/reminder_thursday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_6_defaultValue"
            android:dependency="fast_begins.reminder"
            android:key="fast_begins.reminder.day.6"
            android:title="@string/reminder_friday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_7_defaultValue"
            android:dependency="fast_begins.reminder"
            android:key="fast_begins.reminder.day.7"
            android:title="@string/reminder_saturday" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_appearance_title">
        <SwitchPreference
            android:defaultValue="@bool/emphasis_defaultValue"
            android:key="fast_begins.emphasis"
            android:title="@string/emphasis_title" />
    </PreferenceCategory>

</PreferenceScreen>