<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/opinion">
        <ListPreference
            android:defaultValue="@string/eat_chametz_defaultValue"
            android:dialogIcon="@drawable/ic_settings_opinion"
            android:entries="@array/eat_chametz_entries"
            android:entryValues="@array/eat_chametz_values"
            android:icon="@drawable/ic_settings_opinion"
            android:key="@string/opinion_name_eat_chametz"
            android:title="@string/opinion" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/reminder">
        <com.github.times.preference.ZmanReminderPreference
            android:defaultValue="@string/reminder_defaultValue"
            android:dialogIcon="@drawable/ic_settings_alarm"
            android:entries="@array/reminder_entries"
            android:entryValues="@array/reminder_values"
            android:icon="@drawable/ic_settings_alarm"
            android:key="eat_chametz.reminder"
            android:title="@string/reminder" />
        <CheckBoxPreference
            android:defaultValue="@bool/reminder_day_1_defaultValue"
            android:dependency="eat_chametz.reminder"
            android:key="eat_chametz.reminder.day.1"
            android:title="@string/reminder_sunday" />
        <CheckBoxPreference
            android:defaultValue="@bool/reminder_day_2_defaultValue"
            android:dependency="eat_chametz.reminder"
            android:key="eat_chametz.reminder.day.2"
            android:title="@string/reminder_monday" />
        <CheckBoxPreference
            android:defaultValue="@bool/reminder_day_3_defaultValue"
            android:dependency="eat_chametz.reminder"
            android:key="eat_chametz.reminder.day.3"
            android:title="@string/reminder_tuesday" />
        <CheckBoxPreference
            android:defaultValue="@bool/reminder_day_4_defaultValue"
            android:dependency="eat_chametz.reminder"
            android:key="eat_chametz.reminder.day.4"
            android:title="@string/reminder_wednesday" />
        <CheckBoxPreference
            android:defaultValue="@bool/reminder_day_5_defaultValue"
            android:dependency="eat_chametz.reminder"
            android:key="eat_chametz.reminder.day.5"
            android:title="@string/reminder_thursday" />
        <CheckBoxPreference
            android:defaultValue="@bool/reminder_day_6_defaultValue"
            android:dependency="eat_chametz.reminder"
            android:key="eat_chametz.reminder.day.6"
            android:title="@string/reminder_friday" />
        <CheckBoxPreference
            android:defaultValue="@bool/reminder_day_7_defaultValue"
            android:dependency="eat_chametz.reminder"
            android:key="eat_chametz.reminder.day.7"
            android:title="@string/reminder_saturday" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_appearance_title">
        <CheckBoxPreference
            android:defaultValue="@bool/emphasis_defaultValue"
            android:key="eat_chametz.emphasis"
            android:title="@string/emphasis_title" />
    </PreferenceCategory>

</PreferenceScreen>