<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/opinion">
        <ListPreference
            android:defaultValue="@string/burn_chametz_defaultValue"
            android:dialogIcon="@drawable/ic_settings_opinion"
            android:entries="@array/burn_chametz_entries"
            android:entryValues="@array/burn_chametz_values"
            android:icon="@drawable/ic_settings_opinion"
            android:key="@string/opinion_name_burn_chametz"
            android:title="@string/opinion"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/reminder">
        <com.github.times.preference.ZmanReminderPreference
            android:defaultValue="@integer/reminder_defaultValue"
            android:dialogIcon="@drawable/ic_settings_alarm"
            android:icon="@drawable/ic_settings_alarm"
            android:key="burn_chametz.reminder"
            android:title="@string/reminder"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_1_defaultValue"
            android:dependency="burn_chametz.reminder"
            android:key="burn_chametz.reminder.day.1"
            android:title="@string/reminder_sunday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_2_defaultValue"
            android:dependency="burn_chametz.reminder"
            android:key="burn_chametz.reminder.day.2"
            android:title="@string/reminder_monday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_3_defaultValue"
            android:dependency="burn_chametz.reminder"
            android:key="burn_chametz.reminder.day.3"
            android:title="@string/reminder_tuesday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_4_defaultValue"
            android:dependency="burn_chametz.reminder"
            android:key="burn_chametz.reminder.day.4"
            android:title="@string/reminder_wednesday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_5_defaultValue"
            android:dependency="burn_chametz.reminder"
            android:key="burn_chametz.reminder.day.5"
            android:title="@string/reminder_thursday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_6_defaultValue"
            android:dependency="burn_chametz.reminder"
            android:key="burn_chametz.reminder.day.6"
            android:title="@string/reminder_friday" />
        <SwitchPreference
            android:defaultValue="@bool/reminder_day_7_defaultValue"
            android:dependency="burn_chametz.reminder"
            android:key="burn_chametz.reminder.day.7"
            android:title="@string/reminder_saturday" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_appearance_title">
        <SwitchPreference
            android:defaultValue="@bool/emphasis_defaultValue"
            android:key="burn_chametz.emphasis"
            android:title="@string/emphasis_title" />
    </PreferenceCategory>

</PreferenceScreen>